[tool.poetry]
name = "youtube-video-analyzer"
version = "0.1.0"
description = "A multi-agent-based project using crewai for YouTube video analysis"
authors = ["Emirhan Silsupur <sr.emirhn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.8,<=3.12"
crewai = "^0.51.1"
langchain-groq = "^0.1.9"
streamlit = "^1.37.1"
pydantic = "^2.8.0"
crewai-tools = "^0.4.26"
fpdf = "^1.7.2"
requests = "^2.32.3"
python-dotenv = "^1.0.1"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"